# ITMO

./: README.md
algorithms-and-data-structures/: README.md
algorithms-and-data-structures/01. Sort, Binary Heap, Binary Search/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.java  I.cpp  J.cpp  K.cpp  README.md
algorithms-and-data-structures/02. Stack, Queue, DSU/: A.cpp  B.cpp  C.cpp  D.cpp  E.java  F.cpp  G.cpp  H.cpp  README.md
algorithms-and-data-structures/03. DP/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  README.md
algorithms-and-data-structures/04. Segment Tree/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  J.cpp  K.cpp  L.cpp  README.md
algorithms-and-data-structures/05. Binary Search Tree/: A.java  B.java  C.java  D.java  E.java  F.java  README.md
algorithms-and-data-structures/06. LCA, Link-Cut, Euler-Tour/: A.java  B.java  C.java  D.java  E.java  F.java  README.md
algorithms-and-data-structures/07. DFS, MST/: A.cpp  B.cpp  C.cpp  E.cpp  H.cpp  I.cpp  J.cpp  README.md
algorithms-and-data-structures/08. Shortest Paths && Games on Graphs/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  README.md
algorithms-and-data-structures/09. String Algorithms/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  README.md
algorithms-and-data-structures/10. Matchings/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  README.md
algorithms-and-data-structures/11.Max Flow/: D.cpp  F.cpp  README.md
algorithms-and-data-structures/12.Min Cost Max Flow/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  README.md
algorithms-and-data-structures/13. Math, Cryptography, FFT/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  README.md
cpp-course/: README.md
cpp-course/autocomplete/: README.md  autocomplete.cpp  autocomplete.hpp  autocomplete_test.cpp  binary_search_deluxe.cpp  binary_search_deluxe.hpp  term.cpp  term.hpp
cpp-course/puzzle-game/: README.md  board.cpp  board.h  main.cpp  puzzle_game.cpp  puzzle_game.h
cpp-course/randomized-queue-and-deque/: README.md  randomized_deque.hpp  randomized_deque_test.cpp  randomized_queue.hpp  randomized_queue_test.cpp  subset.cpp
discrete-math/: README.md
discrete-math/Context Free Grammar/: A.java  B.java  C.java  D.java  E.cpp  README.md
discrete-math/Generating Functions/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
discrete-math/Hamiltonian Paths && Cycles/: a.cpp  b.cpp  d.cpp
discrete-math/Matroids && Matroids Intersection/: check.cpp  cycles.cpp  destroy.cpp  matching.cpp  rainbow.cpp
discrete-math/Turing/: aplusb.out  balanced.out  convertto2.out  less.out  mirror.out  multiplication.out  postfixlogic.out  reverse.out  tandem.out
functional-programming/: stack.yaml
functional-programming/hw1/: README.md  hw1.cabal
functional-programming/hw1/src/: Lib.hs
functional-programming/hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
functional-programming/hw1/src/Block2/: Task2.hs
functional-programming/hw1/src/Block3/: Task1.hs  Task2.hs
functional-programming/hw1/test/: Test.hs
functional-programming/hw1/test/Block1Test/: Task1Test.hs  Task2Test.hs  Task3Test.hs
functional-programming/hw1/test/Block2Test/: Task1Test.hs  Task2Test.hs
functional-programming/hw1/test/Block3Test/: Task1Test.hs  Task2Test.hs
functional-programming/hw2/: README.md  hw2.cabal
functional-programming/hw2/src/Block1/: Task1.hs  Task2.hs  Task3.hs
functional-programming/hw2/src/Block2/: Task1.hs  Task2.hs
functional-programming/hw2/src/Block3/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
functional-programming/hw2/test/: Test.hs
functional-programming/hw2/test/Block1Test/: Task1Test.hs  Task2Test.hs  Task3Test.hs
functional-programming/hw2/test/Block2Test/: Task1Test.hs  Task2Test.hs
functional-programming/hw2/test/Block3Test/: Task2Test.hs  Task3Test.hs
functional-programming/hw3/: README.md  hw3.cabal
functional-programming/hw3/app/: Main.hs
functional-programming/hw3/src/: FsActions.hs  MockFS.hs  Parser.hs  RealFS.hs
functional-programming/hw3/test/: Test.hs
functional-programming/hw4/: README.md  hw4.cabal
functional-programming/hw4/bench/: GeometryBenchmark.hs  Main.hs  MonteCarloBenchmark.hs  geom_bench_log.txt  monte_carlo_bench_log.txt
functional-programming/hw4/src/: Task1.hs  Task1Strict.hs  Task2.hs  Task3.hs  Task6.hs  Task7.hs  Task8.hs
java-advanced/: README.md  module-info.java  package-info.java
js-course/: README.md  hw1.js  hw2.js  hw5.js
js-course/hw1/: README.md
js-course/hw2/: README.md
js-course/hw3/: README.md  hw3.js
js-course/hw4/: README.md  hw4.js
js-course/hw5/: README.md
js-course/hw6/: .gitignore  package-lock.json  package.json
js-course/hw7/: README.md  index.css  index.html  index.js
machine-learning/: README.md
machine-learning/codeforces/: A.cpp  B.cpp  C.scala  D.cpp  E.py  F.cpp  L.scala  M.scala  O.scala  P.cpp  Q.cpp
machine-learning/datasets/: dataset_knn.csv
math-logic/: README.md
math-logic/TaskA/: Lex.hs  Lex.x  Main.hs  Makefile  Parser.hs  Parser.y
math-logic/TaskB/: Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.y
math-logic/TaskD/: Main.hs  Makefile  Parser.hs  Parser.y
operating-systems/: README.md
operating-systems/lab1/: script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh
operating-systems/lab2/: scipt8.sh  script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh
operating-systems/lab3/: script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh
operating-systems/lab4/: script1.sh  script2.sh  script3.sh  script4_1.sh  script4_2.sh  script5_gen.sh  script5_handler.sh  script6_gen.sh  script6_handler.sh  script7_gen.sh  script7_handler.sh
operating-systems/lab5/: backup.sh  rmtrash.sh  untrash.sh  upback.sh
operating-systems/lab6/: lab6
programming-paradigms/: README.md
programming-paradigms/Clojure/: README.md  hw7.clj  hw8.clj  hw9.clj
programming-paradigms/JS/: hw4.js  hw6.js
programming-paradigms/Prolog/: hw11.pl
translation-methods/: README.md
ux-course/: README.md
(+416 files in other folders)
